# smart-contract-scanner

./: .gitignore  README.md  pyproject.toml
scanner/: __init__.py  analyzer.py  cli.py  patterns.py
tests/: test_scanner.py
tests/test_files/samples/: safe_contract.sol  vulnerable.sol
