[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sol-scanner"
version = "1.0.0"
description = "Smart Contract Vulnerability Scanner - Static analysis for Solidity code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "LMTRADES"}
]
keywords = ["solidity", "smart-contract", "security", "vulnerability", "scanner", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black",
    "ruff",
]

[project.scripts]
sol-scanner = "scanner.cli:main"

[project.urls]
"Homepage" = "https://github.com/LMTRADES/smart-contract-scanner"
"Bug Tracker" = "https://github.com/LMTRADES/smart-contract-scanner/issues"
"Source" = "https://github.com/LMTRADES/smart-contract-scanner"

[tool.setuptools.packages.find]
include = ["scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py38"]
